# Aldor

./: .gitignore  Cargo.toml  README.md
migrations/2020-06-16-211356_set_extensions/: up.sql
migrations/2020-06-16-211357_create_users/: up.sql
migrations/2020-06-18-002153_create_accounts/: down.sql  up.sql
migrations/2020-06-19-043299_create_vaults/: down.sql  up.sql
migrations/2020-06-19-043300_create_transactions/: down.sql  up.sql
migrations/2020-06-25-033105_create_loans/: down.sql  up.sql
src/: account.rs  account_transaction.rs  bank.rs  bank_transaction.rs  db.rs  error.rs  errors.rs  lib.rs  loan.rs  main.rs  notes.md  schema.rs  testutil.rs  transaction.rs  types.rs  user.rs  vault.rs
src/bank/: error.rs  mod.rs  service.rs  service_test.rs
tests/: bank.rs  common.rs  lib.rs  tests.rs
tests/repos/: account.rs  account_transaction.rs  bank_transaction.rs  common.rs  loan.rs  transaction.rs  user.rs
