[package]
name = "bank-api"
version = "0.1.0"
authors = ["Vincent Xiao <vincentx72@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "^1.4.5", features = ["postgres", "r2d2", "uuidv07", "numeric"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
bigdecimal = "0.1.2"
dotenv = "0.15.0"
r2d2 = "0.8.2"
tokio = {version="0.2", features=["macros"]}
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.3.1"


